-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 5.5.47-galera
-
Fix Version/s: 5.5.48-galera
-
Component/s: wsrep
-
Labels:
worker[1] Using MTR_BUILD_THREAD 300, with reserved ports 16000..16019
|
sys_vars.ignore_db_dirs_basic [ fail ] Found warnings/errors in server log file!
|
Test ended at 2016-02-17 12:15:29
|
line
|
==15149== Conditional jump or move depends on uninitialised value(s)
|
==15149== at 0x4C31FCE: strstr (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
|
==15149== by 0x7745FD: find_opts(argv_copy&, opt*) (wsrep_check_opts.cc:159)
|
==15149== by 0x774B90: check_opts(int, char const* const*, opt*) (wsrep_check_opts.cc:275)
|
==15149== by 0x7751BF: wsrep_check_opts(int, char* const*) (wsrep_check_opts.cc:381)
|
==15149== by 0x55D076: init_common_variables() (mysqld.cc:3775)
|
==15149== by 0x561844: mysqld_main(int, char**) (mysqld.cc:5631)
|
==15149== by 0x5571AC: main (main.cc:25)
|
^ Found warnings in /home/nirbhay/project/git-repo/maria/5.5-galera/install/mysql-test/var/log/mysqld.1.err
|