MDEV-9577: sys_vars.ignore_db_dirs_basic fails under Valgrind

Ensure that the command line argument is of sufficient length
before moving past the leading long option marker "--".